[package]
name = "wasm-rs-sandbox"
version = "0.1.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
edition = "2018"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.44"
console_error_panic_hook = "0.1.5"
log = "0.4.8"
femme = "1.3.0"